--- a/package.json
+++ b/package.json
@@ -22,7 +22,20 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
-  "devDependencies": {
+  "dependencies": {
+  "vite": "^5.4.2",
+  "bcryptjs": "^3.0.2",
+  "cors": "^2.8.5",
+  "dotenv": "^17.2.0",
+  "express": "^5.1.0",
+  "jsonwebtoken": "^9.0.2",
+  "lucide-react": "^0.344.0",
+  "mongodb": "^6.17.0",
+  "mongoose": "^8.16.4",
+  "react": "^18.3.1",
+  "react-dom": "^18.3.1"
+},
+"devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.19",
@@ -40,7 +53,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "typescript-eslint": "^8.3.0"
   }
 }
