--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "server:dev": "nodemon server/server.js",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
+    "preview": "vite preview",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
